--- a/src/app/jobs/jobs.component.html
+++ b/src/app/jobs/jobs.component.html
@@ -12,7 +12,7 @@
         </div>
         <div class="favButton buttons">
             <button [class.active-link]="currentUrl==='/jobs/favorites'" class="fav-button buttons" (click)="redirectPage('favorites')">
-                Favorites
+                FAVOURITES
             </button>
         </div>
     </div>
